# mcp-a-protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  Makefile  POSITIONING.md  QUICKSTART.md  README.md  RFC-PROCESS.md  SPEC.md  VALIDATION.md  pyproject.toml
MAEP/: 0001-structured-responses-and-introspection.md  0002-session-management.md  0003-action-primitive.md  0004-hierarchical-schema.md  0005-compiled-query-assistance.md  README.md  TEMPLATE.md
examples/: 01-discover.request.json  01-discover.response.json  02-schema.request.json  02-schema.response.json  03-query-prose.request.json  03-query-prose.response.json  04-query-structured.request.json  04-query-structured.response.json  05-follow_up.request.json  05-follow_up.response.json  06-explain.request.json  06-explain.response.json  07-error-aggregation.request.json  07-error-aggregation.response.json  08-poll.request.json  08-poll.response.json  08-query-draft.request.json  08-query-draft.response.json  09-action.request.json  09-action.response.json  10-action-clarify.request.json  10-action-clarify.response.json  11-action-resume.request.json  11-action-resume.response.json  12-schema-drill.request.json  12-schema-drill.response.json  12b-schema-drill.request.json  12b-schema-drill.response.json  13-schema-action.request.json  13-schema-action.response.json  14-discover-graphql.request.json  14-discover-graphql.response.json  15-schema-graphql.request.json  15-schema-graphql.response.json  16-query-graphql-structured.request.json  16-query-graphql-structured.response.json  (+21 more)
(+36 files in other folders)
